Categories and Header alignment fixed

--- a/client/src/Components/Categories.css
+++ b/client/src/Components/Categories.css
@@ -20,6 +20,6 @@
   background-color:#63c39c;
 }
 .categories-container{
-  padding: 25px 0px;
+  padding: 15px 0px;
   border-bottom: 1px solid #ededed;
 }
